// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Close's createUpdateContactAndLead destination action: all fields 1`] = `
Object {
  "contact_custom_fields": Object {
    "testType": "AY$s*K8XPu",
  },
  "contact_email": "AY$s*K8XPu",
  "contact_name": "AY$s*K8XPu",
  "external_cf_contact_id": "AY$s*K8XPu",
}
`;

exports[`Testing snapshot for Close's createUpdateContactAndLead destination action: required fields 1`] = `
Object {
  "external_cf_contact_id": "AY$s*K8XPu",
}
`;
